AAA code sample

--- a/setup-test/CMakeLists.txt
+++ b/setup-test/CMakeLists.txt
@@ -15,16 +15,16 @@ endif()
 
 # add google test
 include(FetchContent)
-FetchContent_Declare(googletest
+FetchContent_Declare(gtest
   GIT_REPOSITORY https://github.com/google/googletest
   GIT_TAG release-1.11.0 )
-FetchContent_GetProperties(googletest)
-# googletest_POPULATED
-# googletest_SOURCE_DIR
-# googletest_BUILD_DIR
-if(NOT googletest_POPULATED)
-  FetchContent_Populate(googletest)
-  add_subdirectory(${googletest_SOURCE_DIR} ${googletest_BUILD_DIR})
+FetchContent_GetProperties(gtest)
+# gtest_POPULATED
+# gtest_SOURCE_DIR
+# gtest_BUILD_DIR
+if(NOT gtest_POPULATED)
+  FetchContent_Populate(gtest)
+  add_subdirectory(${gtest_SOURCE_DIR} ${gtest_BUILD_DIR})
 endif()
 
 add_library(sumLibrary STATIC LibraryCode.cpp)
